- new methods SCIPaddDialogInputLine() and SCIPaddDialogHistoryLine()
- method SCIPgetNConflictClausesFound() renamed to SCIPgetNConflictConssFound()
- method SCIPgetNConflictClausesFoundNode() renamed to SCIPgetNConflictConssFoundNode()
- method SCIPgetNConflictClausesApplied() renamed to SCIPgetNConflictConssApplied()
- new method SCIPgetFocusDepth()

plugins:
- new primal heuristic "shifting"
- new separator "redcost" which replaces the internal reduced cost strengthening
- new propagator "rootredcost" which applies reduced cost fixing at the root node whenever a best new primal solution
  was found
- new constraint handler "bounddisjunction"
- new methods SCIPgetRowKnapsack(), SCIPgetRowLinear(), SCIPgetRowLogicor(), SCIPgetRowSetppc(), and SCIPgetRowVarbound()
  for obtaining the linear relaxation of a corresponding constraint
- new methods SCIPgetNVarsAnd() and SCIPgetVarsAnd()
- new methods SCIPgetWeightsKnapsack(), SCIPgetNVarsKnapsack(), SCIPgetVarsKnapsack(), and SCIPgetWeightsKnapsack()
- new methods SCIPgetNVarsLinear(), SCIPgetVarsLinear(), and SCIPgetValsLinear()
- new methods SCIPgetNVarsOr() and SCIPgetVarsOr()
- new methods SCIPgetLhsVarbound(), SCIPgetRhsVarbound(), SCIPgetVarVarbound(), SCIPgetVbdvarVarbound(), and
  SCIPgetVbdcoefVarbound()
- new methods SCIPgetNVarsXor() and SCIPgetVarsXor()

parameters:
- new parameter constraints/linear/separateall
- new parameter conflict/lpiterations
- new parameter conflict/keepreprop
- removed parameter propagating/redcostfreq, because reduced cost strengthening is now an external separator plugin
- new parameters branching/relpscost/conflictweight, branching/relpscost/inferenceweight,
  branching/relpscost/cutoffweight, and branching/relpscost/pscostweight
- new parameter conflict/settlelocal
- removed parameter conflict/maxunfixed
- parameter conflict/maxclauses renamed to conflict/maxconss
- parameter conflict/interclauses renamed to conflict/interconss