@@ -14,7 +14,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: set.h,v 1.92 2006/03/09 12:52:20 bzfpfend Exp $"
+#pragma ident "@(#) $Id: set.h,v 1.93 2006/03/13 15:35:55 bzfberth Exp $"
 
 /**@file   set.h
  * @brief  internal methods for global SCIP settings
@@ -957,20 +957,22 @@ SCIP_Real SCIPsetFeasFrac(
    SCIP_Real             val                 /**< value to return fractional part for */
    );
 
-/** checks, if the first given lower bound is tighter (w.r.t. bound strengthening epsilon) than the second one */
+/** checks, if the given new lower bound is tighter (w.r.t. bound strengthening epsilon) than the old one */
 extern
 SCIP_Bool SCIPsetIsLbBetter(
    SCIP_SET*             set,                /**< global SCIP settings */
-   SCIP_Real             lb1,                /**< first lower bound to compare */
-   SCIP_Real             lb2                 /**< second lower bound to compare */
+   SCIP_Real             newlb,              /**< new lower bound */
+   SCIP_Real             oldlb,              /**< old lower bound */
+   SCIP_Real             oldub               /**< old upper bound */
    );
 
-/** checks, if the first given upper bound is tighter (w.r.t. bound strengthening epsilon) than the second one */
+/** checks, if the given new upper bound is tighter (w.r.t. bound strengthening epsilon) than the old one */
 extern
 SCIP_Bool SCIPsetIsUbBetter(
    SCIP_SET*             set,                /**< global SCIP settings */
-   SCIP_Real             ub1,                /**< first upper bound to compare */
-   SCIP_Real             ub2                 /**< second upper bound to compare */
+   SCIP_Real             newub,              /**< new upper bound */
+   SCIP_Real             oldlb,              /**< old lower bound */
+   SCIP_Real             oldub               /**< old upper bound */
    );
 
 /** checks, if the given cut's efficacy is larger than the minimal cut efficacy */
@@ -1115,8 +1117,10 @@ SCIP_Bool SCIPsetIsSumRelGE(
 #define SCIPsetFeasCeil(set, val)          ( EPSCEIL(val, (set)->num_feastol) )
 #define SCIPsetFeasFrac(set, val)          ( EPSFRAC(val, (set)->num_feastol) )
 
-#define SCIPsetIsLbBetter(set, lb1, lb2)   ( EPSGT(lb1, lb2, (set)->num_boundstreps) )
-#define SCIPsetIsUbBetter(set, ub1, ub2)   ( EPSLT(ub1, ub2, (set)->num_boundstreps) )
+#define SCIPsetIsLbBetter(set, newlb, oldlb, oldub) ( EPSGT(newlb, oldlb, \
+         set->num_boundstreps * MAX(MIN((oldub) - (oldlb), REALABS(oldlb)), 1.0)) )
+#define SCIPsetIsUbBetter(set, newub, oldlb, oldub) ( EPSLT(newub, oldub, \
+         set->num_boundstreps * MAX(MIN((oldub) - (oldlb), REALABS(oldub)), 1.0)) )
 #define SCIPsetIsEfficacious(set, root, efficacy) \
    ( root ? EPSP(efficacy, (set)->sepa_minefficacyroot) : EPSP(efficacy, (set)->sepa_minefficacy) )
 
